removed =swap in the @import lines on Css

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -2,19 +2,32 @@
 <html lang="en">
 
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no" />
-  <meta name="description" content="This page is informative with some of the most impotents
-          methods of Git and how to use it in the professional way" />
-  <script src="https://kit.fontawesome.com/c0b874b18b.js" crossorigin="anonymous" defer></script>
-  <link href="//fonts.googleapis.com/css?family=Roboto:400,500,300" rel="stylesheet" type="text/css" />
-  <link rel="shortcut icon" type="image/x-icon" href="img/github-logo-5F384D0265-seeklogo.com.png" />
-  <title>Git WireFrame</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+  <meta name="description"
+    content="This page is informative with some of the most important methods of Git and how to use it in a professional way" />
+
+  <!-- Preconnect para Google Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;300&display" rel="stylesheet">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Sixtyfour+Convergence&display" as="style">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Kalnia:wght@100..700&display" as="style">
+
   <link rel="stylesheet" href="/Wireframe/css/style.css">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+
+  <!-- FontAwesome script -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/x-icon" href="/Wireframe/img/github-logo-5F384D0265-seeklogo.com.webp" />
+
+  <!-- Preload de imagen -->
+  <link rel="preload" href="/Wireframe/img/giff.webp" as="image">
+
+  <title>Git WireFrame</title>
 </head>
+
 
 <body>
   <header>
@@ -26,7 +39,8 @@
   </header>
   <main>
     <article class="hero">
-      <img src="/Wireframe/img/giff.webp" alt="Gif of video showing how works the git control version" class="img-hero">
+      <img src="/Wireframe/img/ezgif.com-speed.webp" alt="Gif of video showing how works the git control version"
+        class="img-hero" loading="eager">
       <h2>What is Git</h2>
       <p class="overlay">
         By far, the most widely used modern version control system in the world today is Git. Git is a mature, actively
@@ -45,12 +59,13 @@
         version control systems like CVS or Subversion (also known as SVN), in Git, every developer's working copy of
         the code is also a repository that can contain the full history of all changes.
       </p>
-      <a class="button" href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" target="_blank">Read
-        More</a>
+      <a class="button" href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" target="_blank">Learn more
+        about Git </a>
     </article>
     <section class="wrapper">
       <article class="article-wrapper">
-        <img src="/Wireframe/img/teamGitworkflow.webp" alt="image of team discussing git control version of their projects" class="img-article">
+        <img src="/Wireframe/img/teamGitworkflow2.webp" alt="image of team work in the same project webpage"
+          class="img-article" loading="eager">
         <h2>Why do developers need Git?</h2>
         <p class="overlay">
           Developers need Git because it is a vital tool for version control that facilitates efficient collaboration,
@@ -68,11 +83,12 @@
           disruption.
         </p>
         <a class="button" href="https://www.coursera.org/articles/what-is-git"
-          aria-label="Read more about why developers need Git on Coursera" target="_blank">Read More</a>
+          aria-label="Read more about why developers need Git on Coursera" target="_blank">Discover what Git is </a>
       </article>
 
       <article class="article-wrapper">
-        <img src="/Wireframe/img/git.webp" alt="image of 3 computers working in the same project but different branches" class="img-article">
+        <img src="/Wireframe/img/git.webp" alt="image of 3 computers working in the same project but different branches"
+          class="img-article">
         <h2>What is a branch in Git?</h2>
         <p class="overlay">
           In Git, a branch is a separate line of development that allows developers to work on different features, bug
@@ -92,14 +108,16 @@
         </p>
         <a class="button" href="https://www.javatpoint.com/git-branch" target="_blank"
           aria-label="Read more about Git branches (opens in a new tab)">
-          Read more
+          Explore Git branching techniques
         </a>
       </article>
     </section>
   </main>
   <footer>
-    <p class="media-text">&copy Karla Grajales <i class="fa-regular fa-face-laugh-wink"
-        aria-label="Karla is the name of the developer Author"></i></p>
+    <p class="media-text">
+      &copy; Berta
+      <i class="fa-regular fa-face-laugh-wink" role="img" aria-label="Berta is the name of the developer, Author"></i>
+    </p>
     <div class="social">
       <a class="facebook" href="https://www.facebook.com/groups/front.designer" target="_blank"
         aria-label="Visit our Facebook group"><i class="fa-brands fa-facebook"></i></a>
