changed the name of author on footer

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -115,8 +115,8 @@
   </main>
   <footer>
     <p class="media-text">
-      &copy; Berta
-      <i class="fa-regular fa-face-laugh-wink" role="img" aria-label="Berta is the name of the developer, Author"></i>
+      &copy; Karla G.
+      <i class="fa-regular fa-face-laugh-wink" role="img" aria-label="Karla G. is the name of the developer, Author"></i>
     </p>
     <div class="social">
       <a class="facebook" href="https://www.facebook.com/groups/front.designer" target="_blank"
