--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -37,7 +37,7 @@
   </header>
   <main>
     <article class="hero">
-      <img src="/Wireframe/img/git.webp" alt="Gif of video showing how works the git control version"
+      <img src="/Wireframe/img/giff.gif" alt="Gif of video showing how works the git control version"
         class="img-hero" loading="eager">
       <h2>What is Git</h2>
       <p class="overlay">
